<resources>
    <string name="app_name">MvvmMovieApp</string>
    <string name="cinemax">cinemax</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_explanation">Enter your registered \nPhone Number to Sign Up</string>
    <string name="already_have_acc">I already have an account? Login</string>
    <string name="sign_up_with">Or Sign up with</string>
    <string name="login">Login</string>
    <string name="welcome_text">Welcome back! Please enter your details.</string>
    <string name="enter_email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hi_tiffany">Hi, Tiffany</string>
    <string name="back_press_btn">Back press btn</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="sign_up">Sign Up</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="sign_up_desc">The latest movies and series are here</string>
    <string name="full_name">Full Name</string>
    <string name="terms_of_use">I agree to the Terms and Services and Privacy Policy</string>
    <string name="terms_and_services_clicked">Terms and Services clicked!</string>
    <string name="privacy_policy_clicked">Privacy Policy clicked!</string>
    <string name="something_went_wrong_try_again">Something went wrong, try again!</string>
    <string name="reset_password">Reset Password</string>
    <string name="recover_acc_pass">Recover your account password</string>
    <string name="check_your_email">Check your email!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms</string>
    <string name="terms_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>
    <string name="changes_to_terms_and_service">Changes to the Service and/or Terms:</string>
    <string name="home">Home</string>
    <string name="bottom_nav_bar">Bottom nav bar</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="profile_image_preview">Profile img</string>
    <string name="hello_user">Hello, Smith</string>
    <string name="lets_stream">Let’s stream your favorite movie</string>
    <string name="search_a_title">Search a title...</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="comedy">Comedy</string>
    <string name="animation">Animation</string>
    <string name="documentation">Documentation</string>
    <string name="most_popular">Most popular</string>
    <string name="see_all">See All</string>
    <string name="life_of_pi">Life of Pi</string>
    <string name="poster_img">Film poster img</string>
    <string name="genre">Genre\n</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="change_password">Change password</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="more">More</string>
    <string name="legal_and_policy">Legal and Policies</string>
    <string name="help"><![CDATA[Help & Feedback]]></string>
    <string name="log_out">Log Out</string>
    <string name="type_title">Type title, categories, years, etc</string>
    <string name="today">Today</string>
    <string name="recommended_for_you">Recommended for you</string>
</resources>