<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="16dp"
    android:layout_marginStart="24dp"
    android:backgroundTint="@color/primary_soft"
    app:cardCornerRadius="12dp">



    <LinearLayout
        android:id="@+id/character_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_character"
            android:layout_width="160dp"
            android:layout_height="178dp"
            android:contentDescription="@string/poster_img"
            tools:src="@drawable/test_item_img"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_film_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/life_of_pi"
            android:textSize="18sp"
            android:singleLine="true"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:marqueeRepeatLimit="marquee_forever"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/white"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"/>

        <TextView
            android:id="@+id/tv_film_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/genre"
            android:textAlignment="center"
            android:textSize="11sp"
            android:layout_marginTop="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:marqueeRepeatLimit="marquee_forever"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/grey" />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_rate_default"/>

</androidx.cardview.widget.CardView>